// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple array 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="position: absolute; width: 100%; border-style: dashed; border-color: black;"
      >
        <div
          id="compile-result"
          style="margin: 6px; flex: 1; overflow-x: hidden; overflow-y: auto;"
        >
          <div
            class="active-result-block-container result-segment"
            id="result-segment-0"
          >
            <span
              style="display: block;"
            >
              \\begin{equation}
    \\displaystyle
    a\\ = \\
    
    
    \\begin{array}{c}
        1\\pm 1
    \\end{array}
    \\displaystyle
    
    
    
    \\end{equation}
    
            </span>
            <div
              style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
            >
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        10^{2},\\ 10^{2}
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation} 
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        100,\\ 100
    \\end{array}
    \\displaystyle
    \\right]
    \\pm 20
    
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma(a) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{4 \\cdot a^{2} \\cdot \\sigma(a)^{2}}
  \\displaystyle
   \\ =
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  },\\ \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = \\left[
        \\begin{array}{c}
        20,\\ 20
        \\end{array}
       \\right]
        \\end{equation}
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="position: absolute; width: 100%; border-style: dashed; border-color: black;"
    >
      <div
        id="compile-result"
        style="margin: 6px; flex: 1; overflow-x: hidden; overflow-y: auto;"
      >
        <div
          class="active-result-block-container result-segment"
          id="result-segment-0"
        >
          <span
            style="display: block;"
          >
            \\begin{equation}
    \\displaystyle
    a\\ = \\
    
    
    \\begin{array}{c}
        1\\pm 1
    \\end{array}
    \\displaystyle
    
    
    
    \\end{equation}
    
          </span>
          <div
            style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
          >
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        10^{2},\\ 10^{2}
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation} 
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        100,\\ 100
    \\end{array}
    \\displaystyle
    \\right]
    \\pm 20
    
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma(a) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{4 \\cdot a^{2} \\cdot \\sigma(a)^{2}}
  \\displaystyle
   \\ =
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  },\\ \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = \\left[
        \\begin{array}{c}
        20,\\ 20
        \\end{array}
       \\right]
        \\end{equation}
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Simple detailed segment 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="position: absolute; width: 100%; border-style: dashed; border-color: black;"
      >
        <div
          id="compile-result"
          style="margin: 6px; flex: 1; overflow-x: hidden; overflow-y: auto;"
        >
          <div
            class="active-result-block-container result-segment"
            id="result-segment-0"
          >
            <div
              style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
            >
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    
    \\begin{array}{c}
        10^{2}
    \\end{array}
    
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation} 
        \\ = \\ 
    
    \\begin{array}{c}
        100\\pm 20
    \\end{array}
    \\displaystyle
    
    
    
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma \\left ( a \\right ) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{4 \\cdot a^{2} \\cdot \\sigma \\left ( a \\right )^{2}}
  \\displaystyle
   \\ =
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = 
        \\begin{array}{c}
        20
        \\end{array}
       
        \\end{equation}
              </span>
            </div>
            <div
              style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
            >
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        10^{2},\\ 10^{2}
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation} 
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        100,\\ 100
    \\end{array}
    \\displaystyle
    \\right]
    \\pm 20
    
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma \\left ( a \\right ) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{
  \\begin{array}{l}
  1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + \\\\ 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1
  \\end{array}
  }
  \\displaystyle
   \\ =
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  },\\ \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
              </span>
              <span
                style="display: block;"
              >
                
        \\begin{equation}
        \\displaystyle
        = \\left[
        \\begin{array}{c}
        20,\\ 20
        \\end{array}
       \\right]
        \\end{equation}
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="position: absolute; width: 100%; border-style: dashed; border-color: black;"
    >
      <div
        id="compile-result"
        style="margin: 6px; flex: 1; overflow-x: hidden; overflow-y: auto;"
      >
        <div
          class="active-result-block-container result-segment"
          id="result-segment-0"
        >
          <div
            style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
          >
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    
    \\begin{array}{c}
        10^{2}
    \\end{array}
    
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation} 
        \\ = \\ 
    
    \\begin{array}{c}
        100\\pm 20
    \\end{array}
    \\displaystyle
    
    
    
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma \\left ( a \\right ) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{4 \\cdot a^{2} \\cdot \\sigma \\left ( a \\right )^{2}}
  \\displaystyle
   \\ =
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = 
        \\begin{array}{c}
        20
        \\end{array}
       
        \\end{equation}
            </span>
          </div>
          <div
            style="display: flex; flex-direction: column; gap: 5px; overflow-wrap: break-word; word-wrap: break-word; white-space: normal; max-width: 100%;"
          >
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        b \\ = \\ 
  \\displaystyle
  a^{2}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        10^{2},\\ 10^{2}
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation} 
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        100,\\ 100
    \\end{array}
    \\displaystyle
    \\right]
    \\pm 20
    
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\sigma(b) \\ = \\ 
  \\displaystyle
  \\sqrt{\\left ( \\frac{\\partial b}{\\partial a} \\cdot \\sigma \\left ( a \\right ) \\right )^{2}}
  \\displaystyle
   \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = \\ 
  \\displaystyle
  \\sqrt{
  \\begin{array}{l}
  1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + \\\\ 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1
  \\end{array}
  }
  \\displaystyle
   \\ =
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        \\ = \\ 
    \\left[
    \\begin{array}{c}
        \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  },\\ \\sqrt{
  \\begin{array}{l}
  4 \\cdot 10^{2} \\cdot 1^{2}
  \\end{array}
  }
    \\end{array}
    \\right]
    \\displaystyle
     \\ = \\
        \\end{equation}
            </span>
            <span
              style="display: block;"
            >
              
        \\begin{equation}
        \\displaystyle
        = \\left[
        \\begin{array}{c}
        20,\\ 20
        \\end{array}
       \\right]
        \\end{equation}
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
